adjusted project/namespace name for AutoRest.CSharp.Azure

--- a/src/generator/AutoRest.AzureResourceSchema.Tests/AutoRest.AzureResourceSchema.Tests.csproj
+++ b/src/generator/AutoRest.AzureResourceSchema.Tests/AutoRest.AzureResourceSchema.Tests.csproj
@@ -12,7 +12,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Rest.Generator.AzureResourceSchema.Tests</RootNamespace>
     <RootNamespace>AutoRest.AzureResourceSchema.Tests</RootNamespace>
-    <AssemblyName>AutoRest.Generator.AzureResourceSchema.Tests</AssemblyName>
+    <AssemblyName>AutoRest.AzureResourceSchema.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
