--- a/src/generator/AutoRest.CSharp.Azure/AutoRest.CSharp.Azure.csproj
+++ b/src/generator/AutoRest.CSharp.Azure/AutoRest.CSharp.Azure.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{4899B527-6815-4E89-84B3-DD5A507B205A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Microsoft.Rest.Generator.CSharp.Azure</RootNamespace>
-    <AssemblyName>AutoRest.Generator.Azure.CSharp</AssemblyName>
+    <RootNamespace>AutoRest.CSharp.Azure</RootNamespace>
+    <AssemblyName>AutoRest.CSharp.Azure</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <Configuration Condition=" '$(Configuration)' == '' ">Net45-Debug</Configuration>
   </PropertyGroup>
@@ -18,6 +18,7 @@
     <Optimize>false</Optimize>
     <OutputPath>bin\Net45-Debug</OutputPath>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Net45-Debug\AutoRest.CSharp.Azure.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
