--- a/src/core/AutoRest.Core.Tests/AutoRest.Core.Tests.csproj
+++ b/src/core/AutoRest.Core.Tests/AutoRest.Core.Tests.csproj
@@ -63,9 +63,9 @@
       <Project>{c876085f-9dc3-41f0-b7b4-17022cd84684}</Project>
       <Name>AutoRest.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\generator\AutoRest.CSharp\AutoRest.Generator.CSharp.csproj">
+    <ProjectReference Include="..\..\generator\AutoRest.CSharp\AutoRest.CSharp.csproj">
       <Project>{cc1eec95-41ef-44b6-8761-00fa3e647248}</Project>
-      <Name>AutoRest.Generator.CSharp</Name>
+      <Name>AutoRest.CSharp</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\generator\AutoRest.NodeJS.Azure\AutoRest.Generator.Azure.NodeJS.csproj">
       <Project>{909bf4ef-4eca-4ac4-8e21-cdcf05393161}</Project>
