--- a/src/core/AutoRest.Extensions.Tests/AutoRest.Generator.Extensions.Tests.csproj
+++ b/src/core/AutoRest.Extensions.Tests/AutoRest.Generator.Extensions.Tests.csproj
@@ -53,9 +53,9 @@
       <Project>{c876085f-9dc3-41f0-b7b4-17022cd84684}</Project>
       <Name>AutoRest.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\generator\AutoRest.CSharp\AutoRest.Generator.CSharp.csproj">
+    <ProjectReference Include="..\..\generator\AutoRest.CSharp\AutoRest.CSharp.csproj">
       <Project>{cc1eec95-41ef-44b6-8761-00fa3e647248}</Project>
-      <Name>AutoRest.Generator.CSharp</Name>
+      <Name>AutoRest.CSharp</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\generator\AutoRest.Java\AutoRest.Generator.Java.csproj">
       <Project>{34b82690-0083-4f4c-8abf-2d2a09304915}</Project>
