--- a/src/generator/AutoRest.CSharp.Azure/AutoRest.CSharp.Azure.csproj
+++ b/src/generator/AutoRest.CSharp.Azure/AutoRest.CSharp.Azure.csproj
@@ -76,9 +76,9 @@
       <Project>{7dd043eb-5e53-4180-b123-cc3cc5022e34}</Project>
       <Name>AutoRest.Generator.Extensions</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AutoRest.CSharp\AutoRest.Generator.CSharp.csproj">
+    <ProjectReference Include="..\AutoRest.CSharp\AutoRest.CSharp.csproj">
       <Project>{cc1eec95-41ef-44b6-8761-00fa3e647248}</Project>
-      <Name>AutoRest.Generator.CSharp</Name>
+      <Name>AutoRest.CSharp</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
