--- a/src/generator/AutoRest.CSharp/AutoRest.CSharp.csproj
+++ b/src/generator/AutoRest.CSharp/AutoRest.CSharp.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{CC1EEC95-41EF-44B6-8761-00FA3E647248}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Microsoft.Rest.Generator.CSharp</RootNamespace>
-    <AssemblyName>AutoRest.Generator.CSharp</AssemblyName>
+    <RootNamespace>AutoRest.CSharp</RootNamespace>
+    <AssemblyName>AutoRest.CSharp</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <Configuration Condition=" '$(Configuration)' == '' ">Net45-Debug</Configuration>
   </PropertyGroup>
@@ -18,6 +18,7 @@
     <Optimize>false</Optimize>
     <OutputPath>bin\Net45-Debug</OutputPath>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Net45-Debug\AutoRest.CSharp.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
