--- a/src/core/AutoRest.Extensions.Tests/AutoRest.Extensions.Tests.csproj
+++ b/src/core/AutoRest.Extensions.Tests/AutoRest.Extensions.Tests.csproj
@@ -8,48 +8,53 @@
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <LibraryFxTarget Condition="'$(LibraryFxTarget)' == ''">net45</LibraryFxTarget>
-    <ProjectGuid>{2C062B51-EFD0-4FDC-8F75-3D76161FBCB5}</ProjectGuid>
+    <ProjectGuid>{25B049BF-66AC-4B7A-B6B1-3DC74DE3951C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Microsoft.Rest.Generator.Azure.Extensions.Tests</RootNamespace>
-    <AssemblyName>AutoRest.Generator.Azure.Extensions.Tests</AssemblyName>
+    <RootNamespace>AutoRest.Extensions.Tests</RootNamespace>
+    <AssemblyName>AutoRest.Extensions.Tests</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <RestorePackages>true</RestorePackages>
     <AutoRestTest>true</AutoRestTest>
     <NuGetPackageImportStamp>ee0e6b21</NuGetPackageImportStamp>
     <Configuration Condition=" '$(Configuration)' == '' ">Net45-Debug</Configuration>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Net45-Release|AnyCPU'">
+    <DocumentationFile>bin\Net45-Release\AutoRest.Extensions.Tests.xml</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Portable-Debug|AnyCPU'">
+    <DocumentationFile>bin\Portable-Debug\AutoRest.Extensions.Tests.xml</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Portable-Release|AnyCPU'">
+    <DocumentationFile>bin\Portable-Release\AutoRest.Extensions.Tests.xml</DocumentationFile>
+  </PropertyGroup>
   <Import Project="$(SolutionDir)\Tools\AutoRest.Settings.targets" />
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Net45-Debug|AnyCPU' ">
     <Optimize>false</Optimize>
     <OutputPath>bin\Net45-Debug</OutputPath>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Net45-Debug\AutoRest.Extensions.Tests.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="CSharpAzureCodeNamingFrameworkTests.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="SampleAzureCodeNamer.cs" />
-    <Compile Include="SampleAzureCodeGenerator.cs" />
     <None Include="$(SolutionDir)\AutoRest\AutoRest\AutoRest.json">
       <Link>AutoRest.json</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Compile Include="Helpers.cs" />
+    <Compile Include="MappingTests.cs" />
+    <Compile Include="ExtensionsTests.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AzureServiceClientNormalizerTests.cs" />
-    <None Include="app.config" />
-    <None Include="Swagger\azure-paging.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Swagger\resource-external-false.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Swagger\swagger-odata-spec.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Swagger\swagger-resource-flattening.json">
+    <None Include="Swagger\swagger-x-ms-client-name.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Swagger\swagger-x-ms-client-flatten.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Swagger\swagger-payload-flatten.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
@@ -58,37 +63,37 @@
       <Project>{c876085f-9dc3-41f0-b7b4-17022cd84684}</Project>
       <Name>AutoRest.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\modeler\AutoRest.Swagger\AutoRest.Modeler.Swagger.csproj">
-      <Project>{9517265e-5127-460c-9dde-fe017d73121c}</Project>
-      <Name>AutoRest.Modeler.Swagger</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\generator\AutoRest.CSharp.Azure\AutoRest.CSharp.Azure.csproj">
-      <Project>{4899b527-6815-4e89-84b3-dd5a507b205a}</Project>
-      <Name>AutoRest.CSharp.Azure</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\generator\AutoRest.CSharp\AutoRest.CSharp.csproj">
       <Project>{cc1eec95-41ef-44b6-8761-00fa3e647248}</Project>
       <Name>AutoRest.CSharp</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\generator\AutoRest.Java.Azure\AutoRest.Generator.Azure.Java.csproj">
-      <Project>{afd3f1c4-5c59-4018-b0bb-030e0da57c5c}</Project>
-      <Name>AutoRest.Generator.Azure.Java</Name>
+    <ProjectReference Include="..\..\generator\AutoRest.Java\AutoRest.Generator.Java.csproj">
+      <Project>{34b82690-0083-4f4c-8abf-2d2a09304915}</Project>
+      <Name>AutoRest.Generator.Java</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\generator\AutoRest.NodeJS.Azure\AutoRest.Generator.Azure.NodeJS.csproj">
-      <Project>{909bf4ef-4eca-4ac4-8e21-cdcf05393161}</Project>
-      <Name>AutoRest.Generator.Azure.NodeJS</Name>
+    <ProjectReference Include="..\..\generator\AutoRest.NodeJS\AutoRest.Generator.NodeJS.csproj">
+      <Project>{77e73f37-9586-44ea-91b0-f244d08467d2}</Project>
+      <Name>AutoRest.Generator.NodeJS</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\generator\AutoRest.Ruby.Azure\AutoRest.Generator.Azure.Ruby.csproj">
-      <Project>{31931998-7543-41da-9e58-d9670d810352}</Project>
-      <Name>AutoRest.Generator.Azure.Ruby</Name>
+    <ProjectReference Include="..\..\generator\AutoRest.Python\AutoRest.Generator.Python.csproj">
+      <Project>{b3ac3239-0b12-415a-94ce-bff6de1a537e}</Project>
+      <Name>AutoRest.Generator.Python</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AutoRest.Extensions.Azure\AutoRest.Generator.Azure.Extensions.csproj">
+    <ProjectReference Include="..\..\generator\AutoRest.Ruby\AutoRest.Generator.Ruby.csproj">
+      <Project>{a7780698-3072-486e-a105-81eddf552598}</Project>
+      <Name>AutoRest.Generator.Ruby</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AutoRest.Extensions.Azure\AutoRest.Extensions.Azure.csproj">
       <Project>{90b943ab-3879-4b64-b9ff-1a21297c0f26}</Project>
-      <Name>AutoRest.Generator.Azure.Extensions</Name>
+      <Name>AutoRest.Extensions.Azure</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AutoRest.Extensions\AutoRest.Generator.Extensions.csproj">
+    <ProjectReference Include="..\..\modeler\AutoRest.Swagger\AutoRest.Modeler.Swagger.csproj">
+      <Project>{9517265e-5127-460c-9dde-fe017d73121c}</Project>
+      <Name>AutoRest.Modeler.Swagger</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AutoRest.Extensions\AutoRest.Extensions.csproj">
       <Project>{7dd043eb-5e53-4180-b123-cc3cc5022e34}</Project>
-      <Name>AutoRest.Generator.Extensions</Name>
+      <Name>AutoRest.Extensions</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -113,7 +118,11 @@
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <ProjectExtensions />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties Swagger_4swagger-x-ms-client-flatten_1json__JSONSchema="http://json.schemastore.org/swagger-2.0" />
+    </VisualStudio>
+  </ProjectExtensions>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
