--- a/src/generator/AutoRest.AzureResourceSchema/AutoRest.AzureResourceSchema.csproj
+++ b/src/generator/AutoRest.AzureResourceSchema/AutoRest.AzureResourceSchema.csproj
@@ -44,9 +44,9 @@
       <Project>{c876085f-9dc3-41f0-b7b4-17022cd84684}</Project>
       <Name>AutoRest.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\core\AutoRest.Extensions\AutoRest.Generator.Extensions.csproj">
+    <ProjectReference Include="..\..\core\AutoRest.Extensions\AutoRest.Extensions.csproj">
       <Project>{7dd043eb-5e53-4180-b123-cc3cc5022e34}</Project>
-      <Name>AutoRest.Generator.Extensions</Name>
+      <Name>AutoRest.Extensions</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
