--- a/src/generator/AutoRest.Java.Azure.Fluent/AutoRest.Generator.Azure.Java.Fluent.csproj
+++ b/src/generator/AutoRest.Java.Azure.Fluent/AutoRest.Generator.Azure.Java.Fluent.csproj
@@ -52,13 +52,13 @@
       <Project>{c876085f-9dc3-41f0-b7b4-17022cd84684}</Project>
       <Name>AutoRest.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\core\AutoRest.Extensions.Azure\AutoRest.Generator.Azure.Extensions.csproj">
+    <ProjectReference Include="..\..\core\AutoRest.Extensions.Azure\AutoRest.Extensions.Azure.csproj">
       <Project>{90b943ab-3879-4b64-b9ff-1a21297c0f26}</Project>
-      <Name>AutoRest.Generator.Azure.Extensions</Name>
+      <Name>AutoRest.Extensions.Azure</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\core\AutoRest.Extensions\AutoRest.Generator.Extensions.csproj">
+    <ProjectReference Include="..\..\core\AutoRest.Extensions\AutoRest.Extensions.csproj">
       <Project>{7dd043eb-5e53-4180-b123-cc3cc5022e34}</Project>
-      <Name>AutoRest.Generator.Extensions</Name>
+      <Name>AutoRest.Extensions</Name>
     </ProjectReference>
     <ProjectReference Include="..\AutoRest.Java.Azure\AutoRest.Generator.Azure.Java.csproj">
       <Project>{afd3f1c4-5c59-4018-b0bb-030e0da57c5c}</Project>
