--- a/AutoRest/AutoRest.Core/AutoRest.Core.csproj
+++ b/AutoRest/AutoRest.Core/AutoRest.Core.csproj
@@ -40,6 +40,7 @@
     <Compile Include="ClientModel\ParameterLocation.cs" />
     <Compile Include="ClientModel\Constraint.cs" />
     <Compile Include="JSONSourceContext.cs" />
+    <Compile Include="Logging\LogEntrySeverityConsoleColor.cs" />
     <Compile Include="NoopCodeGenerator.cs" />
     <Compile Include="CodeNamer.cs" />
     <Compile Include="GlobalSuppressions.cs" />
