--- a/src/generator/AutoRest.Python.Azure.Tests/tox.ini
+++ b/src/generator/AutoRest.Python.Azure.Tests/tox.ini
@@ -6,7 +6,7 @@ skipsdist=True
 commands=
     coverage run ./AcceptanceTests/__init__.py
     coverage report --fail-under=60 --omit=AcceptanceTests*.py,*.tox*.py
-    flake8 . --exclude=*Python.Tests*AcceptanceTests*.py,*Python.Tests*bin* --statistics
+    flake8 . --exclude=*Python.Azure.Tests*AcceptanceTests*.py,*Python.Azure.Tests*bin* --statistics
     
 setenv =
     PythonLogLevel=30
