update license in header of source files to MIT

--- a/Tools/RazorCompiler/RazorCompiler/RazorCompiler.csproj
+++ b/Tools/RazorCompiler/RazorCompiler/RazorCompiler.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.AspNet.Razor">
-      <HintPath>$(SolutionDir)packages\Microsoft.AspNet.Razor.4.0.0-beta3\lib\net45\Microsoft.AspNet.Razor.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.Razor.4.0.0-beta3\lib\net45\Microsoft.AspNet.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
