--- a/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
+++ b/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
@@ -74,7 +74,9 @@
     <Compile Include="Model\Info.cs" />
     <Compile Include="Model\Tag.cs" />
     <Compile Include="Model\TransferProtocolScheme.cs" />
+    <Compile Include="ValidationRules\AnonymousParameterTypes.cs" />
     <Compile Include="ValidationRules\AnonymousTypes.cs" />
+    <Compile Include="ValidationRules\DescriptiveDescriptionRequired.cs" />
     <Compile Include="ValidationRules\XmsPathsInPath.cs" />
     <Compile Include="ValidationRules\OperationIdSingleUnderscore.cs" />
     <Compile Include="ValidationRules\DefaultResponseRequired.cs" />
