Remove Gemfile.lock and adding it to .gitignore (#1257)

--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,6 @@ src/generator/AutoRest.Ruby*/*/RspecTests/Generated/*
 dnx-clr-win-x86*/
 dnx-coreclr-win-x86*/
 /dnx
+
+# Gemfile.lock
+Gemfile.lock
