--- a/ClientRuntimes/CSharp/ClientRuntime.Azure.Authentication/Microsoft.Rest.ClientRuntime.Azure.Authentication.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure.Authentication/Microsoft.Rest.ClientRuntime.Azure.Authentication.nuspec
@@ -25,7 +25,7 @@
     </references>
     <dependencies>
       <dependency id="Microsoft.Rest.ClientRuntime" version="[1.3,2)"/>
-      <dependency id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="[2.26.305102204]"/>
+      <dependency id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="[2.28.0]"/>
     </dependencies>
   </metadata>
   <files>
