--- a/src/client/Python/msrest/tox.ini
+++ b/src/client/Python/msrest/tox.ini
@@ -6,8 +6,8 @@ skipsdist=True
 changedir=test
 commands=
     coverage run -m unittest discover -s . -p unittest*.py -t .. -v
-    coverage report --fail-under=30 --omit=*test*,*.tox*.py --include=*msrestazure*
-    #flake8 .. --exclude=unittest*.py,doc --statistics
+    coverage report --fail-under=40 --omit=unittest*,*.tox*.py
+    #flake8 .. --exclude=unittest*.py,doc,env --statistics
 
 [testenv:py27]
 deps=
