--- a/src/generator/AutoRest.Python.Azure.Tests/tox.ini
+++ b/src/generator/AutoRest.Python.Azure.Tests/tox.ini
@@ -6,13 +6,13 @@ skipsdist=True
 commands=
     coverage run ./AcceptanceTests/__init__.py
     coverage report --fail-under=60 --omit=AcceptanceTests*.py,*.tox*.py
-    flake8 . --exclude=*Python.Tests*AcceptanceTests*.py,*Python.Tests*bin.*,*.tox*.py --statistics
+    flake8 . --exclude=*Python.Azure.Tests*AcceptanceTests*.py,*Python.Azure.Tests*bin*,*.tox*.py --statistics
     
 setenv =
     PythonLogLevel=30
 
 [flake8]
-ignore = E501
+ignore = E501,F401
 max-line-length = 100
 
 [testenv:py27]
